<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProvinciaActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="208dp"
        android:layout_height="342dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="59dp"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r1" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r2" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r3" />

        <RadioButton
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r4" />

        <RadioButton
            android:id="@+id/r5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r5" />

        <RadioButton
            android:id="@+id/r6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r6" />

        <RadioButton
            android:id="@+id/r7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r7" />
    </RadioGroup>

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="99dp"
        android:text="@string/selec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>